--- a/04 - Array Cardio Day 1/index-START.html
+++ b/04 - Array Cardio Day 1/index-START.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <title>Array Cardio 💪</title>
 </head>
+
 <body>
-  <p><em>Psst: have a look at the JavaScript Console</em> 💁</p>
+  <p>
+    <em>Psst: have a look at the JavaScript Console</em> 💁</p>
   <script>
     // Get your shorts on - this is an array workout!
     // ## Array Cardio Day 1
@@ -31,29 +34,61 @@
 
     // Array.prototype.filter()
     // 1. Filter the list of inventors for those who were born in the 1500's
+    let newInventors = inventors.filter((inventor) => inventor.year >= 1500 && inventor.year <= 1599);
+    console.log(newInventors)
 
     // Array.prototype.map()
     // 2. Give us an array of the inventors' first and last names
-
+    let names = inventors.map((inventor) => inventor.first + "," + inventor.last);
+    console.log(names)
     // Array.prototype.sort()
     // 3. Sort the inventors by birthdate, oldest to youngest
+    let sorted = inventors.sort((a, b) => a.year - b.year);
+    console.log(sorted);
 
     // Array.prototype.reduce()
     // 4. How many years did all the inventors live?
+    let totally = inventors.reduce((acc, curr) => acc + (curr.passed - curr.year), 0);
+    console.log(totally);
 
     // 5. Sort the inventors by years lived
+    const oldest = inventors.sort((a, b) => {
+      (a.passed - a.year) > (b.passed - b.year) ? 1 : -1
+    })
+    console.log(oldest)
 
     // 6. create a list of Boulevards in Paris that contain 'de' anywhere in the name
     // https://en.wikipedia.org/wiki/Category:Boulevards_in_Paris
+    // const category = document.querySelector('.mw-category');
+    // const links = Array.from(category.querySelectorAll('a'));
+
+    // const de = links.map((link) => link.textContent).filter((street) => street.includes('de'));
+    // console.log(de);
 
 
     // 7. sort Exercise
-    // Sort the people alphabetically by last name
+    // Sort the people alphabetically by last name;
 
+    const alpha = people.sort((lastOne, nextOne) => {
+      const [aLast, aFirst] = lastOne.split(', ');
+      const [bLast, bFirst] = nextOne.split(', ');
+      return aLast > bLast ? 1 : -1;
+    })
+    console.log(alpha)
     // 8. Reduce Exercise
     // Sum up the instances of each of these
-    const data = ['car', 'car', 'truck', 'truck', 'bike', 'walk', 'car', 'van', 'bike', 'walk', 'car', 'van', 'car', 'truck' ];
+    const data = ['car', 'car', 'truck', 'truck', 'bike', 'walk', 'car', 'van', 'bike', 'walk', 'car', 'van', 'car', 'truck'];
+
+    const instances = data.reduce((accumulator, current) => {
+      if (!accumulator[current]) {
+        accumulator[current] = 0
+      }
+      accumulator[current]++;
+      return accumulator;
+    }, {})
+    console.log(instances)
 
   </script>
 </body>
+
 </html>
