--- a/09 - Dev Tools Domination/index-START.html
+++ b/09 - Dev Tools Domination/index-START.html
@@ -52,7 +52,7 @@
     console.count('Wes')
     // timing
     console.time('fetching data');
-    fetch('https://api.github.com/users/wesbos').then(data => data.json()).then(data => { console.timeEnd('fetching data'); console.log(data) })
+    fetch('https://api.github.com/users/wesbos').then(data => data.json()).then(data => { console.timeEnd('fetching data'); console.log(data) })live
   </script>}
 </body>
 
